--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -8,18 +8,18 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 200px;
+  margin-top: 25vh;
 }
 
 .main-heading {
   font-family: 'Product Sans Medium'; 
-  font-size: 64px;
+  font-size: 4vw;
 }
 
 .typed-out-container {
   display: flex;
   align-items: center;
-  font-size: 64px;
+  font-size: 4vw;
 }
 
 .typed-out {
@@ -46,12 +46,13 @@ body {
 #space-button1 {
   background-color: #0056b3;
   color: white;
-  padding: 10px 20px;
+  padding: 2.3vh 2vw;
   border-radius: 50px;
+  margin-left: 85vh;
   text-transform: uppercase;
   text-decoration: none;
-  margin-top: 50px;
-  margin-left: 630px;
+  margin-top: 10vh;
+  align-self: center;
 }
 
 #space-button1:hover {
@@ -59,30 +60,39 @@ body {
 }
 
 #line-homepage {
-  margin-top: 20px;
-  margin-left: 60px;
+  margin-top: 2vh;
+  width: 90vw;
+  margin-left: 15vh;
 }
 
-.menu {
-  display: none;
-}
+@media (max-width: 600px) {
+  
+  .text-container {
+    font-weight: 500;
+    margin-top: 10vh;
+    overflow:hidden;
+  }
 
-@media (max-width:768px) {
-  *{
-    /* overflow-x: hidden;  */
+  .main-heading {
+    margin-left: 2vw;
+    margin-top: 12vh;
+    font-size: 8vw;
   }
-  .main-heading{
-    font-size: 36px;
+
+  .typed-out-container {
+    font-size: 12vw;
   }
-  .typed-out{
-    font-size: 34px;
+
+  #line-homepage {
+    height: 10vh;
+    margin-left: 1vh;
+    width: 100vw;
+    overflow: hidden;
   }
-  #line-homepage{
-  padding-right: 70px;
-  }
-  #space-button1{
-    margin-left: 150px;
-    align-items: center;
-margin-bottom: 200px;
+
+  #space-button1 {
+    margin-left: 10vh;
+    margin-top: 18vh;
+    padding: 2vh 2vh;
   }
 }
