--- a/src/components/LandingPage/section2/section2.css
+++ b/src/components/LandingPage/section2/section2.css
@@ -7,6 +7,8 @@ body {
 .section2-container {
     background-color: #fff;
     padding: 150px 50px;
+    position: relative;
+    text-align: center;
 }
 
 .section2-container p {
@@ -16,11 +18,12 @@ body {
 .main-para {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
+    text-align: left;
 }
 
 .subscribe-section {
     margin-top: 20px;
-    margin-left: 1000px;
+    text-align: left;
 }
 
 .subscribe-text {
@@ -37,9 +40,30 @@ body {
     margin-left: 10px;
 }
 
+.image-onLeft {
+    position: relative;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.image-onLeft video {
+    width: 100%;
+    height: auto;
+}
+
+.heading-2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    z-index: 1;
+    text-align: center;
+}
+
 .title {
     font-family: 'Manrope', sans-serif;
-    font-size: 2em; 
+    font-size: 3em; 
     font-weight: 300;
     letter-spacing: -1px;
     margin-bottom: 10px;
@@ -52,46 +76,30 @@ body {
     color: #1E88E5; 
 }
 
-.para {
-    margin-left: 1000px;
-    margin-top: 30px;
-}
-.heading-2{
-    margin-left: 70%;
-}
-.para2{
-    margin-left: 1000px;
-    padding-bottom:20px ;
-}
-
-.image-onLeft {
-    float: left;
-    margin-right: 20px;
-    margin-top: -300px;
-    max-width:700px;
-    
-}
-
-@media (max-width:768px) {
-    .para2{
+@media (max-width: 600px) {
+    *{
+        overflow-x:hidden ;
+    }
+    .para2 {
         display: none;
     }
-
-    .para{
-        margin-left: auto;
+    .heading-2 {
+        font-size: 17px;
+        padding-bottom: 90vh;
     }
-    .heading-2{
-        padding-bottom: 100px;
-        font-size: 8px;
+    .title {
+        margin-top: 5vh;
+        font-size: 1em;
+        color: black;
     }
-     .title{
-        margin-top:200px ;
+    .main-para {
+        font-size: 0.875em;
+        margin-top: 20px;
     }
     .subscribe-section {
         margin-top: 20px;
-        margin-left: 100px;
     }
-    .image-onLeft{
-        max-width: auto;
+    .image-onLeft {
+        margin-top: 20px;
     }
 }
