--- a/src/components/LandingPage/FAQ/FAQ.css
+++ b/src/components/LandingPage/FAQ/FAQ.css
@@ -1,4 +1,3 @@
-
 body {
     background: #F3F8FC;
     margin: 0;
@@ -19,32 +18,25 @@ body {
     font-weight: 800;
     letter-spacing: -1px;
     margin-bottom: 20px;
-
 }
 
-.category {
-    font-family: "Montserrat",'sans-serif';
+.category, .heading2 {
+    font-family: "Montserrat", 'sans-serif';
     color: #0074D9;
-    font-weight:400 ;
-    font-size: 20px;
-    margin-left: 240px;
-    margin-bottom: 10px;
-
-}
-.heading2{
-    margin-left: 240px;
-    color: #0074D9;
-    font-weight:400;
+    font-weight: 400;
     font-size: 20px;
     margin-bottom: 10px;
+    margin-left: 240px;
 }
+
 .accordion-container {
-    
     padding: 10px;
     background-color: #FFFFFF;
     border-radius: 10px;
     margin-bottom: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 .accordion {
@@ -57,10 +49,8 @@ body {
     border-bottom: 10px solid #dcdcdc;
 }
 
-/* Additional CSS for general styling */
 body {
     background: #E5F1F7;
-
 }
 
 .heading-top_right p {
@@ -83,38 +73,25 @@ h1 {
     font-weight: bold;
     font-size: 24px;
     margin-top: 30px;
-}
-
-.accordion-container {
-    padding: 15px;
-    background-color: #fff;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    max-width: 1000px;
-    display: grid;
+    text-align: left;
     margin-left: 240px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-@media (max-width:768px) {
-    .heading-top_right{
+@media (max-width: 600px) {
+    .heading-top_right {
         display: none;
     }
-    .category{
-        margin-left: 220px;
+    .heading {
+        text-align: left;
+        font-size: 24px;
+        margin-left: 20px;
+    }
+    .category, .heading2 {
+        font-size: 18px;
+        margin-left: 20px;
     }
     .accordion-container {
-        overflow: hidden;
-        padding: 15px;
-        background-color: #fff;
-        border-radius: 8px;
-        margin-bottom: 20px;
-        max-width: 550px;
-        display: grid;
-        margin-left:20px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    .heading2{
-        margin-left: 150px;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 }
