--- a/src/components/LandingPage/logo-slider/logo.css
+++ b/src/components/LandingPage/logo-slider/logo.css
@@ -1,51 +1,67 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  @keyframes slide {
-    from {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@keyframes slide {
+  from {
       transform: translateX(0);
-    }
-    to {
+  }
+  to {
       transform: translateX(-100%);
-    }
+  }
+}
+
+.logos {
+  overflow: hidden;
+  padding: 60px 0;
+  white-space: nowrap;
+  position: relative;
+  background-color: #E5F1F7;
+}
+
+.logos-slide {
+  display: flex;
+  animation: 30s slide infinite linear;
+}
+
+.logos-slide img {
+  height: 100px;
+  margin: 0 40px;
+}
+
+.logos:before,
+.logos:after {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  content: "";
+  z-index: 2;
+}
+
+
+.top-left {
+  margin-bottom: 1vh;
+  font-weight: 500;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .top-left {
+      margin-left: 5vh;
+      font-size: 14px;
   }
   .logos {
-    overflow: hidden;
-    padding: 60px 0;
-    background: white;
-    white-space: nowrap;
-    position: relative;
-    background-color: #E5F1F7;
+      padding: 30px 0;
   }
-  .logos-slide {
-    display: flex;
-    animation: 30s slide infinite linear;
-  } 
-  
   .logos-slide img {
-    height: 100px;
-    margin: 0 40px;
+      height: 50px;
+      margin: 0 20px;
   }
-  
-  .logos:before,
-  .logos:after {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    height: 100%;
-    content: "";
-    z-index: 2;
+  .logos:before
+  .logos:after{
+    display: none;
   }
-
-  .logos:before {
-    left: 0;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
-  }
-  
-  .logos:after {
-    right: 0;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255));
-  }
+}
