--- a/src/components/LandingPage/FAQ/FAQ.css
+++ b/src/components/LandingPage/FAQ/FAQ.css
@@ -26,10 +26,11 @@ body {
     font-weight: 400;
     font-size: 20px;
     margin-bottom: 10px;
-    margin-left: 240px;
+    margin-left: 50vh;
 }
 
 .accordion-container {
+    text-align: center;
     padding: 10px;
     background-color: #FFFFFF;
     border-radius: 10px;
@@ -93,5 +94,6 @@ h1 {
     .accordion-container {
         margin-left: 20px;
         margin-right: 20px;
+        font-size: 2vh;
     }
 }
