--- a/src/components/LandingPage/footer/footer.css
+++ b/src/components/LandingPage/footer/footer.css
@@ -1,65 +1,125 @@
 .footer-container {
-    background: #f9f9f9;
-    font-family: Arial, sans-serif;
-    color: #333;
-    overflow: hidden;
-    padding-top: 50px;
-    padding-left: 200px;
+  background: #f9f9f9;
+  font-family: Arial, sans-serif;
+  color: #333;
+  overflow-x: hidden;
+  padding: 50px 200px 0;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 20px;
+}
+
+.footer-column {
+  flex: 1;
+  margin-left: 40px;
+  margin-right: 10px;
+}
+
+.footer-column h3 {
+  margin-bottom: 10px;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-column ul li {
+  margin-bottom: 8px;
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.footer-description {
+  margin-bottom: 20px;
+  padding: 0 50px;
+}
+
+.footer-social {
+  margin-bottom: 20px;
+}
+
+.footer-social a {
+  margin: 0 10px;
+  display: inline-block;
+}
+
+.footer-social img {
+  width: 24px;
+  height: 24px;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.footer-links a {
+  margin: 0 15px;
+  color: #333;
+  text-decoration: none;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+.footer-copyright {
+  margin-bottom: 20px;
+}
+
+.hide_this{
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .footer-container {
+    padding: 20px;
+    background-color: cadetblue;
   }
-  
+
   .footer-top {
+    display: none;
+  }
+
+  .footer-description {
+    
+    display: contents;
+    font-size: 12px;
+  }
+
+  .footer-social {
     display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 20px;
-  }
-  
-  .footer-column {
-    flex: 1;
-    margin-right: 20px;
-  }
-  
-  .footer-column h3 {
+    justify-content: center;
+    margin-top: 20px;
     margin-bottom: 10px;
   }
-  
-  .footer-column ul {
-    list-style: none;
-    padding: 0;
+
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  
-  .footer-column ul li {
-    margin-bottom: 8px;
-  }
-  
-  .footer-bottom {
-    margin-left: 50px;
-    padding: 20px 0;
-  }
-  
-  .footer-bottom p {
-    margin-bottom: 20px;
-  }
-  
-  .footer-social a {
-    margin: 0 10px;
-    display: inline-block;
-  }
-  
-  .footer-social img {
-    width: 24px;
-    height: 24px;
-  }
-  .footer-links{
-    margin-left: 300px;
-  }
+
   .footer-links a {
-    margin: 0 15px;
-    color: #333;
-    text-decoration: none;
+    margin-bottom: 10px;
+    
   }
-  
-  .footer-links a:hover {
-    text-decoration: underline;
+  .footer-copyright{
+    display: contents;
+    font-size: 12px;  
   }
-  
+  .hide_this{
+    display: block;
+    margin-left: 14vh;
+    margin-bottom: 5vh;
+  }
+}
