--- a/src/components/LandingPage/section2/section2.css
+++ b/src/components/LandingPage/section2/section2.css
@@ -9,14 +9,6 @@ body {
     padding: 150px 50px;
 }
 
-.section2-container p {
-    margin: 0;
-}
-
-.main-para {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-}
 
 .subscribe-section {
     margin-top: 20px;
@@ -38,29 +30,29 @@ body {
 }
 
 .title {
-    font-family: 'Manrope', sans-serif;
-    font-size: 2em; 
+    font-size: 30px; 
     font-weight: 300;
-    letter-spacing: -1px;
+    letter-spacing: -0.5px;
     margin-bottom: 10px;
+    margin-left: -3vh;
 }
 
 .title-blue {
-    font-family: 'Manrope', sans-serif;
-    font-size: 2.5em; 
+    font-size: 34px; 
     font-weight: 700;
     color: #1E88E5; 
 }
 
 .para {
-    margin-left: 1000px;
-    margin-top: 30px;
+    text-wrap: wrap;
+    margin-left: 130vh;
+    margin-top: 4vh;
 }
 .heading-2{
     margin-left: 70%;
 }
 .para2{
-    margin-left: 1000px;
+    margin-left: 130vh;
     padding-bottom:20px ;
 }
 
@@ -73,14 +65,11 @@ body {
 }
 
 @media (max-width: 600px) {
-    .para2 {
-        display: none;
-    }
-    .title {
-        font-size: 1.5em;
-    }
-    .title-blue {
-        font-size: 1.5em;
-        margin-top:2vh;
-    }
+   .para2{
+    display: none;
+   }
+   .title{
+    text-wrap: wrap;
+    font-size: 12px;
+   }
 }
