--- a/src/components/LandingPage/testimonial/testimonial.css
+++ b/src/components/LandingPage/testimonial/testimonial.css
@@ -4,16 +4,12 @@
   box-sizing: border-box;
 }
 
-.hide_this {
-  display: none;
-}
-
 @keyframes slide {
   0% {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(calc(-100% / 3)); /* Adjusting based on the number of cards */
   }
 }
 
@@ -32,6 +28,7 @@
 .testimonial-container-slide {
   display: flex;
   animation: slide 10s linear infinite;
+  width: calc(100% * 2); /* Double the width to ensure smooth transition */
 }
 
 .heading-top-left {
@@ -79,6 +76,10 @@
   margin-top: 5px;
 }
 
+.heading-top-left1 {
+  display: none;
+}
+
 @media (max-width: 600px) {
   .heading-top-left {
     display: none;
@@ -89,12 +90,18 @@
   .heading-center {
     display: none;
   }
-  .hide_this {
-  padding-right: 22vh;
-    margin-top: 7vh;
+  .heading-top-left1 {
+    display: block;
+    font-size: 14px;
+    padding: 7vh 0 0 2vh;
+    font-weight: 600; 
   }
+
   .testimonial-container-slide {
     flex-direction: row;
     animation: slide 20s linear infinite;
+  }
+  * {
+    overflow-x: hidden;
   }
 }
