--- a/src/components/LandingPage/testimonial/testimonial.css
+++ b/src/components/LandingPage/testimonial/testimonial.css
@@ -105,3 +105,8 @@
     overflow-x: hidden;
   }
 }
+@media (min-width:601px) and (max-width:768px) {
+  .testimonial-grid{
+    overflow: hidden;
+  }
+}
