--- a/src/components/LandingPage/OfferPage/Offer.css
+++ b/src/components/LandingPage/OfferPage/Offer.css
@@ -10,9 +10,8 @@
 
 .sub-header {
   font-size: 14px;
-  display: inline-block;
-  padding: 0; /* Remove any padding */
-  margin: 0 auto; /* Center the text */
+  display: start;
+  margin-right: 173vh;
 }
 
 .heading {
@@ -91,7 +90,7 @@
     display: block;
     text-align: center;
     padding: 0; 
-    margin: 0 auto; 
+    margin: 0 auto; /* Center the text on smaller screens */
   }
 }
 @media (min-width:601px) and (max-width:768px) {
