--- a/src/components/LandingPage/FAQ/FAQ.css
+++ b/src/components/LandingPage/FAQ/FAQ.css
@@ -17,6 +17,7 @@ body {
     font-weight: 800;
     letter-spacing: 2px;
     margin-bottom: 10px;
+
 }
 
 .category, .heading2 {
@@ -25,7 +26,7 @@ body {
     font-weight: 400;
     font-size: 20px;
     margin-bottom: 10px;
-    margin-left: 50vh;
+    margin-left: 47vh;
 }
 
 .accordion-container {
@@ -35,7 +36,7 @@ body {
     border-radius: 10px;
     margin-bottom: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    max-width: 800px;
+    max-width: 100vh;
     margin: 0 auto;
 }
 
