--- a/src/components/LandingPage/footer/footer.css
+++ b/src/components/LandingPage/footer/footer.css
@@ -82,9 +82,9 @@
 }
 
 @media (max-width: 600px) {
+
   .footer-container {
     padding: 20px;
-    background-color: cadetblue;
   }
 
   .footer-top {
@@ -120,10 +120,17 @@
   }
   .hide_this{
     display: block;
-    margin-left: 14vh;
-    margin-bottom: 5vh;
+    margin-left: 1px;
+    margin-bottom: 5px;
   }
+  .footer-column{
+    display: none;
+  }
+
 }
+
+
+
 @media (max-width: 768px) {
   *{
     overflow-x: hidden;
