--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -8,18 +8,21 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 25vh;
+  margin-top: 15vh;
 }
 
 .main-heading {
-  font-family: 'Product Sans Medium'; 
+  font-family: "Gilroy-bold"; 
   font-size: 4vw;
+  color: black;
 }
 
 .typed-out-container {
   display: flex;
   align-items: center;
   font-size: 4vw;
+  color: #2176F6;
+  font-family: "Gilroy-semibold";
 }
 
 .typed-out {
@@ -46,11 +49,11 @@ body {
 #space-button1 {
   background-color: #0056b3;
   color: white;
+  font-family: "Gilroy-semibold";
   padding: 2.3vh 2vw;
   border-radius: 50px;
-  margin-left: 80vh;
-  text-transform: uppercase;
-  text-decoration: none;
+  justify-items: center;
+  margin-left: 43%;
   margin-top: 10vh;
   align-self: center;
 }
@@ -61,8 +64,8 @@ body {
 
 #line-homepage {
   margin-top: 2vh;
-  width: 90vw;
-  margin-left: 15vh;
+  width: 120%;
+  
 }
 
 
