--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -53,8 +53,9 @@ body {
   padding: 2.3vh 2vw;
   border-radius: 50px;
   justify-items: center;
-  margin-left: 43%;
+  margin-left: 42%;
   margin-top: 10vh;
+  margin-bottom: 10vh;
   align-self: center;
 }
 
