--- a/src/components/LandingPage/FAQ/FAQ.css
+++ b/src/components/LandingPage/FAQ/FAQ.css
@@ -5,16 +5,18 @@ body {
 }
 
 .heading-top_right {
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: 600;
     text-align: left;
+    font-family: "Montserrat-semibold";
 }
 
 .heading p{
     text-align: center;
-    font-family: 'Manrope', sans-serif;
+    font-family: 'Montserrat-med';
     font-size: 20px;
     font-style: normal;
-    font-weight: 800;
+    font-weight: 600;
     letter-spacing: 2px;
     margin-bottom: 10px;
 
@@ -23,25 +25,25 @@ body {
 .category, .heading2 {
     font-family: "Montserrat", 'sans-serif';
     color: #0074D9;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 20px;
     margin-bottom: 10px;
-    margin-left: 47vh;
+    margin-left: 40vh;
 }
 
 .accordion-container {
-    text-align: center;
-    padding: 10px;
-    background-color: #FFFFFF;
+    text-align: start;
+    padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    max-width: 100vh;
+    max-width: 120vh;
     margin: 0 auto;
+    margin-bottom: 5vh;
 }
 
 .accordion {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 /* Styles for individual accordion items */
@@ -55,11 +57,11 @@ body {
 }
 
 .heading-top_right p {
-    font-size: 12px;
-    color: #5a5a5a;
-    margin: 0;
-    padding: 20px;
+    font-size: 14px;
+    font-weight: 600;
     text-align: left;
+    margin-left: 2vh;
+    font-family: "Montserrat-semibold";
 }
 
 .heading p {
@@ -69,14 +71,6 @@ body {
     color: #333;
 }
 
-h1 {
-    color: #0074D9;
-    font-weight: bold;
-    font-size: 24px;
-    margin-top: 30px;
-    text-align: left;
-    margin-left: 240px;
-}
 
 @media (max-width: 600px) {
     .heading-top_right {
