--- a/src/components/LandingPage/OfferPage/Offer.css
+++ b/src/components/LandingPage/OfferPage/Offer.css
@@ -9,9 +9,10 @@
 }
 
 .sub-header {
-  font-size: 14px;
-  display: start;
+  font-size: 12px;
   margin-right: 173vh;
+  font-weight: 600;
+  font-family: "Montserrat-med";
 }
 
 .heading {
@@ -40,26 +41,31 @@
   font-size: 32px;
   font-weight: bold;
   margin: 20px 0;
+  font-family: "Gilroy-semibold";
 }
 .offer-title1 {
   font-size: 32px;
   font-weight: bold;
   margin: 20px 0;
+  font-family: "Gilroy-semibold";
 }
 .offer-description {
   font-size: 16px;
   margin: 0 0 20px 0;
+  font-family: "Montserrat";
 }
 .offer-description1{
   font-size: 16px;
+  margin-top: 1000px;
   margin: 0 0 20px 0;
+  font-family: "Montserrat";
 }
 .offer-button {
   background-color: #1E90FF;
   color: white;
   padding: 10px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 20px;
   cursor: pointer;
   font-size: 16px;
 }
@@ -87,7 +93,7 @@
     border-radius: 50px;
   }
   .sub-header {
-    display: block;
+    display: inline;
     text-align: center;
     padding: 0; 
     margin: 0 auto; /* Center the text on smaller screens */
