--- a/src/components/LandingPage/testimonial/testimonial.css
+++ b/src/components/LandingPage/testimonial/testimonial.css
@@ -28,19 +28,21 @@
 .testimonial-container-slide {
   display: flex;
   animation: slide 8s linear infinite;
-  width: calc(100% * 2); /* Double the width to ensure smooth transition */
+  width: calc(100% * 2); 
 }
 
 .heading-top-left {
   font-size: 14px;
   margin-left: 20px;
   margin-top: 10px;
+  font-family: "Montserrat-semibold";
 }
 
 .heading-center {
   text-align: center;
   font-size: 16px;
   font-weight: 800;
+  font-family: "Montserrat-med";
 }
 
 .heading {
@@ -61,18 +63,22 @@
   text-align: center;
   flex: 0 0 auto;
 }
-
+.testimonial-card .message{
+  font-family:"Montserrat-med"
+}
 .testimonial-card img {
   border-radius: 50%;
   margin-top: 0.5px;
 }
 
 .testimonial-card .name {
+  font-family: "Montserrat-semibold";
   font-weight: bold;
   margin-top: -60px;
 }
 
 .testimonial-card .occupation {
+  font-family: "Montserrat-semibold";
   color: gray;
   margin-top: 5px;
 }
@@ -101,6 +107,7 @@
   .testimonial-container-slide {
     flex-direction: row;
     animation: slide 20s linear infinite;
+    font-family: "Montserrat";
   }
   * {
     overflow-x: hidden;
