--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -96,7 +96,7 @@ body {
   }
 
   #space-button1 {
-    margin-left: 7vh;
+    margin-left: 20%;
     margin-top: 18vh;
     padding: 2vh 2vh;
   }
@@ -121,7 +121,7 @@ body {
     }
   
     #space-button1 {
-      margin-left: 30vh;
+      margin-left: 40%;
       margin-top: 15vh;
       padding: 2.3vh 3vw;
       
