--- a/src/components/LandingPage/FAQ/FAQ.css
+++ b/src/components/LandingPage/FAQ/FAQ.css
@@ -33,7 +33,7 @@ body {
 
 .accordion-container {
     text-align: start;
-    padding: 20px;
+    padding: 25px;
     border-radius: 10px;
     margin-bottom: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
@@ -46,9 +46,9 @@ body {
     margin-bottom: 20px;
 }
 
-/* Styles for individual accordion items */
 .accordion-item {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    padding-bottom: 200vh;
     border-bottom: 10px solid #dcdcdc;
 }
 
