--- a/src/components/LandingPage/contactUs/ContactUs.css
+++ b/src/components/LandingPage/contactUs/ContactUs.css
@@ -19,7 +19,7 @@
     font:bold;
   }
   .form-on-right {
-    max-width: 550px;
+    max-width: 500px;
     flex: 1;
     background: white;
     padding: 20px;
@@ -29,6 +29,7 @@
   
   .form-on-right h2 {
     margin-bottom: 10px;
+    margin-left: 0vh;
   }
   
   .form-on-right p {
