--- a/src/components/LandingPage/logo-slider/logo.css
+++ b/src/components/LandingPage/logo-slider/logo.css
@@ -1,91 +1,67 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body {
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes slide {
-  from {
+@keyframes scroll {
+  0% {
     transform: translateX(0);
   }
-  to {
-    transform: translateX(-100%);
+  100% {
+    transform: translateX(-50%);
   }
 }
-
-.logos {
-  overflow: hidden;
-  padding: 60px 0;
-  white-space: nowrap;
-  position: relative;
-  background-color: #E5F1F7;
-}
-
-.logos-slide {
-  display: flex;
-  animation: 30s slide infinite linear;
-}
-
-.logos-slide img {
-  height: 100px;
-  margin: 0 40px;
-}
-
-.logos:before,
-.logos:after {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  height: 100%;
-  content: "";
-  z-index: 2;
-}
-
 .top-left {
   margin-bottom: 1vh;
   font-weight: 800;
-  text-align: center;
+  /* text-align: center; */
+  margin-left: 40%;
+}
+
+.slider {
+  height: 100px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: 100%; 
+  padding-top: 5vh;
+  padding-bottom: 20vh;
+}
+
+.slider .slide-track {
+  display: flex;
+  width: calc(250px * 14); 
+  animation: scroll 20s linear infinite;
+  gap:6vh;
+}
+
+.slider .slide {
+  height: 100px;
+  width: 250px;
+  flex: none;
 }
 
 @media (max-width: 768px) {
-  .top-left {
-    margin-left: 5vh;
-    font-size: 14px;
+  .slider .slide-track {
+    width: calc(200px * 12); /* Adjusted width for smaller screens */
   }
-  .logos {
-    padding: 30px 0;
+  .slider .slide {
+    width: 150px; /* Adjusted width for smaller screens */
   }
-  .logos-slide {
-    animation: 20s slide infinite linear;
-  }
-  .logos-slide img {
-    height: 80px;
-    margin: 0 20px;
-  }
-  .logos:before,
-  .logos:after {
-    display: none;
+  .top-left{
+    margin-left: 35%;
   }
 }
 
 @media (max-width: 600px) {
-  .top-left {
-    margin-left: 1vh;
-    font-size: 14px;
+  .slider .slide-track {
+    width: calc(150px * 12); /* Adjusted width for smallest screens */
   }
-  .logos {
-    padding: 30px 0;
+  .slider .slide {
+    width: 150px; /* Adjusted width for smallest screens */
   }
-  
-  .logos-slide {
-    animation: 15s slide infinite linear;
-  }
-  .logos-slide img {
-    height: 5vh;
-    margin: 0 1px;
-  }
-  .logos:before,
-  .logos:after {
-    display: none;
+  .top-left{
+    margin-left: 6vh;
+    font-size: 2vh;
   }
 }
