--- a/src/components/LandingPage/section2/section2.css
+++ b/src/components/LandingPage/section2/section2.css
@@ -5,7 +5,7 @@ body {
 
 .section2-container {
     background-color: #fff;
-    padding: 150px 50px;
+    padding: 150px 150px;
     margin-top: 5vh;
 }
 
@@ -22,6 +22,7 @@ body {
     font-size: 1em;
     display: flex;
     align-items: center;
+    margin-left: -10vh;
 }
 
 .arrow-icon {
@@ -51,59 +52,63 @@ body {
 .main-para{
     font-family: "Manrope";
     margin-top: 5vh;
+    font-size: 18px;
+    margin-left: -10vh;
 }
 .heading-2 {
-    margin-left: 70%;
+    margin-left: 75%;
 }
 
 .para2 {
     font-family: "Montserrat";
-    margin-left: 120vh;
+    margin-left: 110vh;
     padding-bottom: 20px;
 }
 
 .image-onLeft {
     float: left;
-    margin-right: 20px;
     margin-top: -255px;
-    max-width: 100vh;
+    max-width: 90vh;
+    margin-left: -100px;
 }
 
 .hide_this{
     display: none;
 }
 @media (max-width: 600px) {
-    
-    .title{
-        font-size: 1px;
+    .title {
+        display: none;
+        font-size: 10px;
+        text-align: center;
+        margin: 5px 0;
     }
     .title-blue {
-        font-size: 20px;
+        font-size: 12px;
     }
     .image-onLeft {
-        display: block;
-        margin: 0 auto;
+        display: none;
+        margin: 0 auto 10px;
+        max-width: 50%;
+        text-align: start;
+
     }
     .para {
-        margin-left: 0;
-        margin-top: 20px;
+        margin: 20px 0;
         text-align: center;
         padding: 0 20px;
     }
+    .main-para {
+        font-size: 10px;
+    }
     .subscribe-section {
-        margin-left: 0;
+        margin: 10px auto;
         text-align: center;
     }
-    .hide_this{
-        display: none;
-        height: 10%;
-        width: 450%;
-        padding-right: 2000px;
-        margin-right: 200px;
-        align-items: center;
-        justify-content: center;
+    .subscribe-text {
+        font-size: 12px;
     }
 }
+
 @media  (max-width: 768px) {
     .heading-2 {
         margin-left: 0;
@@ -136,13 +141,14 @@ body {
         padding: 0 20px;
     }
     .main-para{
+        margin-left: 2vh;
         font-size:2vh;
     }
     .subscribe-section {
         margin-left: 0;
         text-align: center;
         margin-top: 20px;
-        margin-left: 2vh;
+        margin-left: 5vh;
     }
 }
 
