--- a/src/components/LandingPage/section2/section2.css
+++ b/src/components/LandingPage/section2/section2.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Montserrat-med';
 }
@@ -22,6 +21,7 @@ body {
     font-size: 1em;
     display: flex;
     align-items: center;
+    white-space: nowrap; /* Ensure the text stays on one line */
     margin-left: -10vh;
 }
 
@@ -75,41 +75,46 @@ body {
 .hide_this{
     display: none;
 }
+
 @media (max-width: 600px) {
+    .section2-container {
+        padding: 20px 10px; /* Adjust padding for smaller screens */
+    }
     .title {
-        display: none;
-        font-size: 10px;
+        font-size: 18px;
         text-align: center;
         margin: 5px 0;
     }
     .title-blue {
-        font-size: 12px;
+        font-size: 20px;
     }
     .image-onLeft {
         display: none;
         margin: 0 auto 10px;
         max-width: 50%;
         text-align: start;
-
     }
     .para {
         margin: 20px 0;
         text-align: center;
-        padding: 0 20px;
+        padding: 0 10px; /* Adjust padding for smaller screens */
     }
     .main-para {
-        font-size: 10px;
+        font-size: 14px;
     }
     .subscribe-section {
-        margin: 10px auto;
+        margin-left: 0;
+        padding-left: 0;
         text-align: center;
     }
     .subscribe-text {
+        margin-left: 0;
         font-size: 12px;
+        justify-content: center; /* Center align the text and icon */
     }
 }
 
-@media  (max-width: 768px) {
+@media (max-width: 768px) {
     .heading-2 {
         margin-left: 0;
         text-align: center;
@@ -119,7 +124,6 @@ body {
         display: none;
     }
     .title {
-        display: block;
         font-size: 34px;
         text-align: center;
         margin-left: 2px;
@@ -140,15 +144,14 @@ body {
         text-align: left;
         padding: 0 20px;
     }
-    .main-para{
+    .main-para {
         margin-left: 2vh;
-        font-size:2vh;
+        font-size: 2vh;
     }
     .subscribe-section {
         margin-left: 0;
         text-align: center;
         margin-top: 20px;
-        margin-left: 5vh;
+        padding-left: 0;
     }
 }
-
