--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -68,15 +68,36 @@ body {
   width: 120%;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 375px) {
+  .main-heading {
+    font-size: 6vw; /* Adjust as needed */
+  }
+  .typed-out-container {
+    font-size: 6vw; /* Adjust as needed */
+  }
   #space-button1 {
-    margin-left: 27%;
+    margin-left: auto;
+    margin-right: auto;
     display: block;
     text-align: center;
   }
 }
 
-@media (min-width:426px) and (max-width: 600px) {
+@media (min-width: 375px) and (max-width: 425px) {
+  .main-heading {
+    font-size: 8vw; /* Adjust as needed */
+  }
+  .typed-out-container {
+    font-size: 10vw; /* Adjust as needed */
+  }
+  #space-button1 {
+    margin-left: 16vh;
+    display: block;
+    text-align: center;
+  }
+}
+
+@media (min-width: 426px) and (max-width: 600px) {
   .text-container {
     font-weight: 500;
     margin-top: 10vh;
