--- a/src/components/LandingPage/footer/footer.css
+++ b/src/components/LandingPage/footer/footer.css
@@ -79,12 +79,14 @@
 .hide_this{
   margin-left: 65vh;
   display: block;
+  
 }
 @media (max-width:425px) {
   .hide_this{
-    padding-right: 22vh;
+    padding-right: 17vh;
+    transform: scale(1.2);
+
   }
-  
   .footer-column {
     display: none;
   }
@@ -120,14 +122,14 @@
   }
 
   .footer-copyright {
-    font-size: 1vh;
+    font-size: 5vh;
     line-height: 1.5;
   }
 
   .hide_this {
     display: block;
-    /* margin: 0 auto 5px; */
-    padding-right: 17vh;
+    padding-right: 20vh;
+    height: 5vh;
   }
 
   .footer-column {
